Fix a bleeding margin gap by setting * margin to 0 by default

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *
 {
     font-family: 'Roboto', sans-serif;
+    margin: 0%;
 }
 
 body
@@ -8,10 +9,10 @@ body
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: black;
+    background-color: rgb(212, 0, 255);
     cursor: url('cursor.png'), auto;
-    width: 99%;
-    height: 99%;
+    width: 100%;
+    height: 100%;
     position: absolute;
 }
 
